# sterm

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  Justfile  README.md  eslint.config.js  knip.json  lefthook.yml  package-lock.json  package.json
.agents/skills/m15-anti-pattern/: SKILL.md
.agents/skills/rust-skills/: AGENTS.md  README.md
.agents/skills/rust-skills/rules/: opt-lto-release.md
.agents/skills/tauri-debugging/: SKILL.md
.agents/skills/tauri-v2/: README.md  SKILL.md
.agents/skills/tauri-v2/references/: advanced-runtime-reference.md  ipc-patterns.md
scripts/: android-debug.mjs  android-snapshot.mjs  cdp-eval-port.mjs  cdp-eval.mjs  clean.mjs  dev-debug.mjs  doctor.mjs
src/: App.vue  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/rterm-client/: Cargo.toml
src-tauri/crates/rterm-client/src/: main.rs
src-tauri/crates/rterm-host/: Cargo.toml
src-tauri/crates/rterm-host/src/: args.rs  main.rs  pty.rs  upnp.rs
src-tauri/crates/rterm-protocol/: Cargo.toml
src-tauri/crates/rterm-protocol/src/: auth.rs  config.rs  frame.rs  lib.rs  output.rs  target.rs  tls.rs  token.rs  tracker.rs
src-tauri/crates/rterm-protocol/tests/: e2e.rs
src-tauri/crates/rterm-relay/: Cargo.toml
src-tauri/crates/rterm-relay/src/: identity.rs  main.rs
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  host.rs  lib.rs  main.rs  p2p_probe.rs  pty.rs
