[package]
name = "sterm"
version = "0.1.0"
description = "Simple Rust/Tauri remote terminal"
authors = ["sterm"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
qrcode = "0.14"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rand = "0.8"
rterm-protocol = { path = "crates/rterm-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["macros", "net", "sync", "time"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
igd = { version = "0.12", features = ["aio"] }
portable-pty = "0.9"

