[package]
name = "rterm-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rterm-protocol = { path = "../rterm-protocol" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
