[package]
name = "rterm-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
hmac = "0.13"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rcgen = "0.14"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
sha2 = "0.11"
tokio = { version = "1", features = ["io-util", "net", "time"] }
webpki-roots = "1"

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "time"] }
