[package]
name = "rterm-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rterm-protocol = { path = "../rterm-protocol" }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
